Remove or replace cchardet with chardet

--- a/notebooks/set logging level for lasio.ipynb
+++ b/notebooks/set logging level for lasio.ipynb
@@ -60,14 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:lasio.reader:Opening ../tests/examples/sample.las as ASCII and treating errors with \"replace\"\n"
+      "INFO:lasio.reader:Opening ../tests/examples/sample.las as ascii and treating errors with \"replace\"\n"
      ]
     }
    ],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -97,28 +97,16 @@
       "DEBUG:lasio.las:Reading ../tests/examples/sample.las...\n",
       "DEBUG:lasio.las:Ignore header lines beginning with ('#',)\n",
       "DEBUG:lasio.las:Ignore data lines beginning with #\n",
-      "DEBUG:lasio.reader:get_encoding Using cchardet\n",
-      "DEBUG:lasio.reader:cchardet method detected encoding of ASCII at confidence 1.0\n",
-      "INFO:lasio.reader:Opening ../tests/examples/sample.las as ASCII and treating errors with \"replace\"\n",
+      "DEBUG:lasio.reader:get_encoding Using chardet\n",
+      "DEBUG:lasio.reader:chardet method detected encoding of ascii at confidence 1.0\n",
+      "INFO:lasio.reader:Opening ../tests/examples/sample.las as ascii and treating errors with \"replace\"\n",
       "DEBUG:lasio.las:Fetching substitutions for read_policy default and null policy strict\n",
-      "DEBUG:lasio.reader:using read policy of \"default\"\n",
-      "DEBUG:lasio.reader:adding substitution comma-decimal-mark\n",
-      "DEBUG:lasio.reader:adding substitution run-on(-)\n",
-      "DEBUG:lasio.reader:adding substitution run-on(.)\n",
-      "DEBUG:lasio.reader:adding substitution run-on(NaN.)\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d),(\\\\d)') substr=\"\\1.\\2\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d)-(\\\\d)') substr=\"\\1 -\\2\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('-?\\\\d*\\\\.\\\\d*\\\\.\\\\d*|NaN[\\\\.-]\\\\d+') substr=\" NaN NaN \"\n",
-      "DEBUG:lasio.reader:using null policy of \"strict\"\n",
-      "DEBUG:lasio.reader:adding substitution NULL\n",
-      "DEBUG:lasio.reader:located substitution for LAS.version.NULL as True\n",
-      "DEBUG:lasio.reader:added numerical substitution: None\n",
       "DEBUG:lasio.las:Found 6 sections\n",
       "DEBUG:lasio.las:Parsing Header items section at lines 1-3 (0 bytes) ~VERSION INFORMATION\n",
       "DEBUG:lasio.reader:Line 1: Section title parsed as '~VERSION INFORMATION'\n",
       "DEBUG:lasio.reader:Line 2: parsed as HeaderItem(mnemonic=\"VERS\", unit=\"\", value=\"1.2\", descr=\"CWLS LOG ASCII STANDA\")\n",
       "DEBUG:lasio.reader:Line 3: parsed as HeaderItem(mnemonic=\"WRAP\", unit=\"\", value=\"NO\", descr=\"ONE LINE PER DEPTH STE\")\n",
-      "DEBUG:lasio.las:Parsing Header items section at lines 4-18 (146 bytes) ~WELL INFORMATION BLOCK\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 4-18 (143 bytes) ~WELL INFORMATION BLOCK\n",
       "DEBUG:lasio.reader:Line 4: Section title parsed as '~WELL INFORMATION BLOCK'\n",
       "DEBUG:lasio.reader:Line 5: treating as a comment and ignoring: '#MNEM.UNIT       DATA TYPE    INFORMATION'\n",
       "DEBUG:lasio.reader:Line 6: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
@@ -134,7 +122,7 @@
       "DEBUG:lasio.reader:Line 16: parsed as HeaderItem(mnemonic=\"SRVC\", unit=\"\", value=\"ANY LOGGING COMPANY LTD.\", descr=\"\")\n",
       "DEBUG:lasio.reader:Line 17: parsed as HeaderItem(mnemonic=\"DATE\", unit=\"\", value=\"25-DEC-1988\", descr=\"LOG DATE\")\n",
       "DEBUG:lasio.reader:Line 18: parsed as HeaderItem(mnemonic=\"UWI\", unit=\"\", value=\"100091604920W300\", descr=\"UNIQUE WE\")\n",
-      "DEBUG:lasio.las:Parsing Header items section at lines 19-29 (773 bytes) ~CURVE INFORMATION\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 19-29 (755 bytes) ~CURVE INFORMATION\n",
       "DEBUG:lasio.reader:Line 19: Section title parsed as '~CURVE INFORMATION'\n",
       "DEBUG:lasio.reader:Line 20: treating as a comment and ignoring: '#MNEM.UNIT      API CODE      CURVE DESCRIPTION'\n",
       "DEBUG:lasio.reader:Line 21: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
@@ -146,7 +134,7 @@
       "DEBUG:lasio.reader:Line 27: parsed as CurveItem(mnemonic=\"SFLA\", unit=\"OHMM\", value=\"\", descr=\"6  SHALLOW RESISTIVITY\", original_mnemonic=\"SFLA\", data.shape=(0,))\n",
       "DEBUG:lasio.reader:Line 28: parsed as CurveItem(mnemonic=\"ILM\", unit=\"OHMM\", value=\"\", descr=\"7  MEDIUM RESISTIVITY\", original_mnemonic=\"ILM\", data.shape=(0,))\n",
       "DEBUG:lasio.reader:Line 29: parsed as CurveItem(mnemonic=\"ILD\", unit=\"OHMM\", value=\"\", descr=\"8  DEEP RESISTIVITY\", original_mnemonic=\"ILD\", data.shape=(0,))\n",
-      "DEBUG:lasio.las:Parsing Header items section at lines 30-39 (1313 bytes) ~PARAMETER INFORMATION\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 30-39 (1284 bytes) ~PARAMETER INFORMATION\n",
       "DEBUG:lasio.reader:Line 30: Section title parsed as '~PARAMETER INFORMATION'\n",
       "DEBUG:lasio.reader:Line 31: treating as a comment and ignoring: '#MNEM.UNIT        VALUE       DESCRIPTION'\n",
       "DEBUG:lasio.reader:Line 32: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
@@ -157,9 +145,20 @@
       "DEBUG:lasio.reader:Line 37: parsed as HeaderItem(mnemonic=\"MDEN\", unit=\"\", value=\"2710.0\", descr=\"LOGGING MATRIX DEN\")\n",
       "DEBUG:lasio.reader:Line 38: parsed as HeaderItem(mnemonic=\"RMF\", unit=\"OHMM\", value=\"0.216\", descr=\"MUD FILTRATE RES\")\n",
       "DEBUG:lasio.reader:Line 39: parsed as HeaderItem(mnemonic=\"DFD\", unit=\"K/M3\", value=\"1525.0\", descr=\"DRILL FLUID DEN\")\n",
-      "DEBUG:lasio.las:Parsing Header (other) section at lines 40-42 (1811 bytes) ~Other\n",
-      "DEBUG:lasio.las:Parsing Data section at lines 43-47 (1947 bytes) ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
+      "DEBUG:lasio.las:Parsing Header (other) section at lines 40-42 (1772 bytes) ~Other\n",
+      "DEBUG:lasio.las:Parsing Data section at lines 43-47 (1905 bytes) ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
       "DEBUG:lasio.las:Storing reference and returning later...\n",
+      "DEBUG:lasio.reader:using read policy of \"default\"\n",
+      "DEBUG:lasio.reader:adding substitution comma-decimal-mark\n",
+      "DEBUG:lasio.reader:adding substitution run-on(-)\n",
+      "DEBUG:lasio.reader:adding substitution run-on(.)\n",
+      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d),(\\\\d)') substr=\"\\1.\\2\"\n",
+      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d)-(\\\\d)') substr=\"\\1 -\\2\"\n",
+      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('-?\\\\d*\\\\.\\\\d*\\\\.\\\\d*|NaN[\\\\.-]\\\\d+') substr=\" NaN NaN \"\n",
+      "DEBUG:lasio.reader:using null policy of \"strict\"\n",
+      "DEBUG:lasio.reader:adding substitution NULL\n",
+      "DEBUG:lasio.reader:located substitution for LAS.version.NULL as True\n",
+      "DEBUG:lasio.reader:added numerical substitution: None\n",
       "DEBUG:lasio.las:Reading data section ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
       "DEBUG:lasio.reader:Consistently found 8 columns\n",
       "DEBUG:lasio.las:Assigning data [1670.    1669.875 1669.75 ] to curve #0\n",
@@ -205,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,28 +214,16 @@
       "DEBUG:lasio.las:Reading ../tests/examples/sample.las...\n",
       "DEBUG:lasio.las:Ignore header lines beginning with ('#',)\n",
       "DEBUG:lasio.las:Ignore data lines beginning with #\n",
-      "DEBUG:lasio.reader:get_encoding Using cchardet\n",
-      "DEBUG:lasio.reader:cchardet method detected encoding of ASCII at confidence 1.0\n",
-      "INFO:lasio.reader:Opening ../tests/examples/sample.las as ASCII and treating errors with \"replace\"\n",
+      "DEBUG:lasio.reader:get_encoding Using chardet\n",
+      "DEBUG:lasio.reader:chardet method detected encoding of ascii at confidence 1.0\n",
+      "INFO:lasio.reader:Opening ../tests/examples/sample.las as ascii and treating errors with \"replace\"\n",
       "DEBUG:lasio.las:Fetching substitutions for read_policy default and null policy strict\n",
-      "DEBUG:lasio.reader:using read policy of \"default\"\n",
-      "DEBUG:lasio.reader:adding substitution comma-decimal-mark\n",
-      "DEBUG:lasio.reader:adding substitution run-on(-)\n",
-      "DEBUG:lasio.reader:adding substitution run-on(.)\n",
-      "DEBUG:lasio.reader:adding substitution run-on(NaN.)\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d),(\\\\d)') substr=\"\\1.\\2\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d)-(\\\\d)') substr=\"\\1 -\\2\"\n",
-      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('-?\\\\d*\\\\.\\\\d*\\\\.\\\\d*|NaN[\\\\.-]\\\\d+') substr=\" NaN NaN \"\n",
-      "DEBUG:lasio.reader:using null policy of \"strict\"\n",
-      "DEBUG:lasio.reader:adding substitution NULL\n",
-      "DEBUG:lasio.reader:located substitution for LAS.version.NULL as True\n",
-      "DEBUG:lasio.reader:added numerical substitution: None\n",
       "DEBUG:lasio.las:Found 6 sections\n",
       "DEBUG:lasio.las:Parsing Header items section at lines 1-3 (0 bytes) ~VERSION INFORMATION\n",
       "DEBUG:lasio.reader:Line 1: Section title parsed as '~VERSION INFORMATION'\n",
       "DEBUG:lasio.reader:Line 2: parsed as HeaderItem(mnemonic=\"VERS\", unit=\"\", value=\"1.2\", descr=\"CWLS LOG ASCII STANDA\")\n",
       "DEBUG:lasio.reader:Line 3: parsed as HeaderItem(mnemonic=\"WRAP\", unit=\"\", value=\"NO\", descr=\"ONE LINE PER DEPTH STE\")\n",
-      "DEBUG:lasio.las:Parsing Header items section at lines 4-18 (146 bytes) ~WELL INFORMATION BLOCK\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 4-18 (143 bytes) ~WELL INFORMATION BLOCK\n",
       "DEBUG:lasio.reader:Line 4: Section title parsed as '~WELL INFORMATION BLOCK'\n",
       "DEBUG:lasio.reader:Line 5: treating as a comment and ignoring: '#MNEM.UNIT       DATA TYPE    INFORMATION'\n",
       "DEBUG:lasio.reader:Line 6: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
@@ -252,7 +239,7 @@
       "DEBUG:lasio.reader:Line 16: parsed as HeaderItem(mnemonic=\"SRVC\", unit=\"\", value=\"ANY LOGGING COMPANY LTD.\", descr=\"\")\n",
       "DEBUG:lasio.reader:Line 17: parsed as HeaderItem(mnemonic=\"DATE\", unit=\"\", value=\"25-DEC-1988\", descr=\"LOG DATE\")\n",
       "DEBUG:lasio.reader:Line 18: parsed as HeaderItem(mnemonic=\"UWI\", unit=\"\", value=\"100091604920W300\", descr=\"UNIQUE WE\")\n",
-      "DEBUG:lasio.las:Parsing Header items section at lines 19-29 (773 bytes) ~CURVE INFORMATION\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 19-29 (755 bytes) ~CURVE INFORMATION\n",
       "DEBUG:lasio.reader:Line 19: Section title parsed as '~CURVE INFORMATION'\n",
       "DEBUG:lasio.reader:Line 20: treating as a comment and ignoring: '#MNEM.UNIT      API CODE      CURVE DESCRIPTION'\n",
       "DEBUG:lasio.reader:Line 21: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
@@ -264,7 +251,7 @@
       "DEBUG:lasio.reader:Line 27: parsed as CurveItem(mnemonic=\"SFLA\", unit=\"OHMM\", value=\"\", descr=\"6  SHALLOW RESISTIVITY\", original_mnemonic=\"SFLA\", data.shape=(0,))\n",
       "DEBUG:lasio.reader:Line 28: parsed as CurveItem(mnemonic=\"ILM\", unit=\"OHMM\", value=\"\", descr=\"7  MEDIUM RESISTIVITY\", original_mnemonic=\"ILM\", data.shape=(0,))\n",
       "DEBUG:lasio.reader:Line 29: parsed as CurveItem(mnemonic=\"ILD\", unit=\"OHMM\", value=\"\", descr=\"8  DEEP RESISTIVITY\", original_mnemonic=\"ILD\", data.shape=(0,))\n",
-      "DEBUG:lasio.las:Parsing Header items section at lines 30-39 (1313 bytes) ~PARAMETER INFORMATION\n",
+      "DEBUG:lasio.las:Parsing Header items section at lines 30-39 (1284 bytes) ~PARAMETER INFORMATION\n",
       "DEBUG:lasio.reader:Line 30: Section title parsed as '~PARAMETER INFORMATION'\n",
       "DEBUG:lasio.reader:Line 31: treating as a comment and ignoring: '#MNEM.UNIT        VALUE       DESCRIPTION'\n",
       "DEBUG:lasio.reader:Line 32: treating as a comment and ignoring: '#---------    -------------   ------------------------------'\n",
@@ -275,9 +262,20 @@
       "DEBUG:lasio.reader:Line 37: parsed as HeaderItem(mnemonic=\"MDEN\", unit=\"\", value=\"2710.0\", descr=\"LOGGING MATRIX DEN\")\n",
       "DEBUG:lasio.reader:Line 38: parsed as HeaderItem(mnemonic=\"RMF\", unit=\"OHMM\", value=\"0.216\", descr=\"MUD FILTRATE RES\")\n",
       "DEBUG:lasio.reader:Line 39: parsed as HeaderItem(mnemonic=\"DFD\", unit=\"K/M3\", value=\"1525.0\", descr=\"DRILL FLUID DEN\")\n",
-      "DEBUG:lasio.las:Parsing Header (other) section at lines 40-42 (1811 bytes) ~Other\n",
-      "DEBUG:lasio.las:Parsing Data section at lines 43-47 (1947 bytes) ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
+      "DEBUG:lasio.las:Parsing Header (other) section at lines 40-42 (1772 bytes) ~Other\n",
+      "DEBUG:lasio.las:Parsing Data section at lines 43-47 (1905 bytes) ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
       "DEBUG:lasio.las:Storing reference and returning later...\n",
+      "DEBUG:lasio.reader:using read policy of \"default\"\n",
+      "DEBUG:lasio.reader:adding substitution comma-decimal-mark\n",
+      "DEBUG:lasio.reader:adding substitution run-on(-)\n",
+      "DEBUG:lasio.reader:adding substitution run-on(.)\n",
+      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d),(\\\\d)') substr=\"\\1.\\2\"\n",
+      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('(\\\\d)-(\\\\d)') substr=\"\\1 -\\2\"\n",
+      "DEBUG:lasio.reader:added regexp substitution: pattern=re.compile('-?\\\\d*\\\\.\\\\d*\\\\.\\\\d*|NaN[\\\\.-]\\\\d+') substr=\" NaN NaN \"\n",
+      "DEBUG:lasio.reader:using null policy of \"strict\"\n",
+      "DEBUG:lasio.reader:adding substitution NULL\n",
+      "DEBUG:lasio.reader:located substitution for LAS.version.NULL as True\n",
+      "DEBUG:lasio.reader:added numerical substitution: None\n",
       "DEBUG:lasio.las:Reading data section ~A  DEPTH     DT       RHOB     NPHI     SFLU     SFLA      ILM      ILD\n",
       "TRACE_LASIO:lasio.reader:Line 44: 8 items counted in '1670.000   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
       "TRACE_LASIO:lasio.reader:Line 45: 8 items counted in '1669.875   123.450 2550.000    0.450  123.450  123.450  110.200  105.600'\n",
@@ -316,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -347,7 +345,7 @@
        "HeaderItem(mnemonic=\"SRVC\", unit=\"\", value=\"ANY LOGGING COMPANY LTD.\", descr=\"\")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,20 +353,13 @@
    "source": [
     "l.header['Well'].SRVC"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:lasiodev]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-lasiodev-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -380,7 +371,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
